--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -76,6 +76,7 @@
   --radius-sm: 0.125rem;
   --radius-md: 0.375rem;
   --radius-lg: 0.5rem;
+  --radius-xl: 1rem;
   --radius-full: 9999px;
   
   /* Shadows */
