--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -21,7 +21,7 @@
             <p class="feature-description">There is no shame in learning first</p>
         </div>
         <div class="feature-card">
-            <h3 class="feature-title">PRACTICE</h3>
+            <a h3 class="feature-title" href="{{ url_for('quiz.list') }}">PRACTICE</a>
             <p class="feature-description">Challenge yourself with practice questions</p>
         </div>
     </div>
