--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,9 +19,9 @@
                 <a href="{{ url_for('main.home') }}" class="navbar-brand">Practice-Learn</a>
                 <div class="nav-links">
                     {% if current_user.is_authenticated %}
-                        <a href="{{ url_for('user.profile') }}">Profile</a>
-                        <a href="{{ url_for('quiz.index') }}">Quiz</a>
-                        <a href="{{ url_for('auth.logout') }}">Logout</a>
+                        <a href="#profile">Profile</a>
+                        <a href="#quiz">Quiz</a>
+                        <a href="#logout">Logout</a>
                     {% else %}
                         <a href="{{ url_for('auth.login') }}">Login</a>
                         <a href="{{ url_for('auth.register') }}">Register</a>
