fixed quiz list

--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -84,6 +84,7 @@
   font-weight: var(--font-weight-semibold);
   margin-bottom: var(--space-4);
   color: var(--text-primary);
+  text-decoration: none;
 }
 
 .feature-description {
