--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,14 +17,13 @@
         <nav class="navbar">
             <div class="navbar-container">
                 <a href="{{ url_for('main.home') }}" class="navbar-brand">Practice-Learn</a>
-                <div class="nav-links">
+                <div class="nav-link">
                     {% if current_user.is_authenticated %}
-                        <a href="#profile">Profile</a>
-                        <a href="#quiz">Quiz</a>
-                        <a href="#logout">Logout</a>
+                        <a class="nav-item" href="#profile">Profile</a>
+                        <a class="nav-item" href="{{ url_for('auth.logout') }}">Logout</a>
                     {% else %}
-                        <a href="{{ url_for('auth.login') }}">Login</a>
-                        <a href="{{ url_for('auth.register') }}">Register</a>
+                        <a class="nav-item" href="{{ url_for('auth.login') }}">Login</a>
+                        <a class="nav-item" href="{{ url_for('auth.register') }}">Register</a>
                     {% endif %}
                 </div>
             </div>
