--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -6,6 +6,6 @@
 <div class="error-container">
     <h1>404 - Page Not Found</h1>
     <p>The page you're looking for doesn't exist.</p>
-    <a href="{{ url_for('main.index') }}" class="btn-primary">Return to Home</a>
+    <a href="{{ url_for('main.home') }}" class="btn-primary">Return to Home</a>
 </div>
 {% endblock %}
