--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -6,6 +6,6 @@
 <div class="error-container">
     <h1>500 - Server Error</h1>
     <p>An unexpected error has occurred. Please try again later.</p>
-    <a href="{{ url_for('main.index') }}" class="btn-primary">Return to Home</a>
+    <a href="{{ url_for('main.home') }}" class="btn-primary">Return to Home</a>
 </div>
 {% endblock %}
