renders, waiting to implement practice logic properly

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,6 +47,7 @@
     </div>
 
     <!-- JavaScript -->
+    {% block extra_js %}{% endblock %}
     {% block scripts %}{% endblock %}
 </body>
 </html>
