--- a/app/static/css/practice.css
+++ b/app/static/css/practice.css
@@ -1,5 +1,5 @@
 /* ========================================
-   QUIZ.CSS - Quiz Pages Specific Styles
+   PRACTICE.CSS - Quiz Pages Specific Styles
    ======================================== */
 
 /* Quiz List Page */
